# bicubic-image-resize

./: CMakeLists.txt  env.sh  env_intel.sh  env_nvhpc.sh  resize.hpp
