cmake_minimum_required(VERSION 2.8)
project(resize)
add_executable(resize main.cpp)
if (CMAKE_CXX_COMPILER_ID STREQUAL "NVHPC")
  target_compile_options(resize PRIVATE -O3 -acc=gpu,multicore -Minfo=acc -gpu=managed)
  find_package(OpenACC)
  if(OpenACC_CXX_FOUND)
    target_link_libraries(resize OpenACC::OpenACC_CXX)
  endif()
else()
endif()